--- a/public/css/app.css
+++ b/public/css/app.css
@@ -922,6 +922,8 @@ video {
   margin-left: -0.5rem;
 }.mb-1 {
   margin-bottom: 0.25rem;
+}.mt-16 {
+  margin-top: 4rem;
 }.block {
   display: block;
 }.inline {
@@ -1002,6 +1004,10 @@ video {
   max-width: 72rem;
 }.max-w-2xl {
   max-width: 42rem;
+}.max-w-xs {
+  max-width: 20rem;
+}.max-w-none {
+  max-width: none;
 }.flex-1 {
   flex: 1 1 0%;
 }.shrink-0 {
@@ -1017,6 +1023,9 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }.translate-y-0 {
   --tw-translate-y: 0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}.rotate-3 {
+  --tw-rotate: 3deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }.scale-95 {
   --tw-scale-x: .95;
@@ -1091,6 +1100,8 @@ video {
        column-gap: 0.25rem;
 }.gap-y-1 {
   row-gap: 0.25rem;
+}.gap-y-16 {
+  row-gap: 4rem;
 }.space-x-8 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(2rem * var(--tw-space-x-reverse));
@@ -1133,6 +1144,8 @@ video {
   border-radius: 0.25rem;
 }.rounded-full {
   border-radius: 9999px;
+}.rounded-2xl {
+  border-radius: 1rem;
 }.rounded-l-md {
   border-top-left-radius: 0.375rem;
   border-bottom-left-radius: 0.375rem;
@@ -1293,6 +1306,9 @@ video {
 }.px-5 {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
+}.px-2\.5 {
+  padding-left: 0.625rem;
+  padding-right: 0.625rem;
 }.pt-6 {
   padding-top: 1.5rem;
 }.pt-5 {
@@ -1426,6 +1442,9 @@ video {
 }.text-zinc-600 {
   --tw-text-opacity: 1;
   color: rgb(82 82 91 / var(--tw-text-opacity));
+}.text-zinc-800 {
+  --tw-text-opacity: 1;
+  color: rgb(39 39 42 / var(--tw-text-opacity));
 }.underline {
   text-decoration-line: underline;
 }.antialiased {
@@ -1441,6 +1460,10 @@ video {
   opacity: 0.5;
 }.opacity-25 {
   opacity: 0.25;
+}.opacity-90 {
+  opacity: 0.9;
+}.opacity-80 {
+  opacity: 0.8;
 }.shadow-sm {
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
@@ -1548,6 +1571,9 @@ video {
 }.hover\:text-gray-900:hover {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
+}.hover\:text-teal-500:hover {
+  --tw-text-opacity: 1;
+  color: rgb(20 184 166 / var(--tw-text-opacity));
 }.focus\:z-10:focus {
   z-index: 10;
 }.focus\:border-blue-300:focus {
@@ -1680,6 +1706,12 @@ video {
   }.dark\:text-gray-400 {
     --tw-text-opacity: 1;
     color: rgb(156 163 175 / var(--tw-text-opacity));
+  }.dark\:text-zinc-200 {
+    --tw-text-opacity: 1;
+    color: rgb(228 228 231 / var(--tw-text-opacity));
+  }.dark\:hover\:text-teal-500:hover {
+    --tw-text-opacity: 1;
+    color: rgb(20 184 166 / var(--tw-text-opacity));
   }
 }@media (min-width: 640px) {.sm\:col-span-4 {
     grid-column: span 4 / span 4;
@@ -1706,6 +1738,8 @@ video {
     margin-left: 1.5rem;
   }.sm\:ml-0 {
     margin-left: 0px;
+  }.sm\:mt-32 {
+    margin-top: 8rem;
   }.sm\:block {
     display: block;
   }.sm\:flex {
@@ -1730,6 +1764,10 @@ video {
     max-width: 36rem;
   }.sm\:max-w-2xl {
     max-width: 42rem;
+  }.sm\:max-w-none {
+    max-width: none;
+  }.sm\:max-w-xs {
+    max-width: 20rem;
   }.sm\:flex-1 {
     flex: 1 1 0%;
   }.sm\:translate-y-0 {
@@ -1837,10 +1875,16 @@ video {
   }.md\:border-l {
     border-left-width: 1px;
   }
-}@media (min-width: 1024px) {.lg\:col-span-4 {
+}@media (min-width: 1024px) {.lg\:order-first {
+    order: -9999;
+  }.lg\:col-span-4 {
     grid-column: span 4 / span 4;
+  }.lg\:row-span-2 {
+    grid-row: span 2 / span 2;
   }.lg\:max-w-5xl {
     max-width: 64rem;
+  }.lg\:max-w-none {
+    max-width: none;
   }.lg\:columns-4 {
     -moz-columns: 4;
          columns: 4;
@@ -1852,12 +1896,20 @@ video {
          columns: 5;
   }.lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }.lg\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }.lg\:grid-rows-\[auto_1fr\] {
+    grid-template-rows: auto 1fr;
+  }.lg\:gap-y-12 {
+    row-gap: 3rem;
   }.lg\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
   }.lg\:px-12 {
     padding-left: 3rem;
     padding-right: 3rem;
+  }.lg\:pl-20 {
+    padding-left: 5rem;
   }
 }@media (min-width: 1280px) {.xl\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
