--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1198,6 +1198,9 @@ video {
 }.border-gray-500 {
   --tw-border-opacity: 1;
   border-color: rgb(107 114 128 / var(--tw-border-opacity));
+}.border-zinc-100 {
+  --tw-border-opacity: 1;
+  border-color: rgb(244 244 245 / var(--tw-border-opacity));
 }.bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -1691,6 +1694,8 @@ video {
     border-color: rgb(55 65 81 / var(--tw-border-opacity));
   }.dark\:border-zinc-700\/40 {
     border-color: rgb(63 63 70 / 0.4);
+  }.dark\:border-gray-700\/40 {
+    border-color: rgb(55 65 81 / 0.4);
   }.dark\:bg-gray-900 {
     --tw-bg-opacity: 1;
     background-color: rgb(17 24 39 / var(--tw-bg-opacity));
