--- a/public/css/app.css
+++ b/public/css/app.css
@@ -847,6 +847,10 @@ video {
   right: 0px;
 }.top-0 {
   top: 0px;
+}.-top-8 {
+  top: -2rem;
+}.-bottom-8 {
+  bottom: -2rem;
 }.isolate {
   isolation: isolate;
 }.z-0 {
@@ -914,16 +918,16 @@ video {
   margin-bottom: 1rem;
 }.-mt-px {
   margin-top: -1px;
+}.mt-16 {
+  margin-top: 4rem;
 }.mt-9 {
   margin-top: 2.25rem;
 }.mt-20 {
   margin-top: 5rem;
 }.-ml-2 {
   margin-left: -0.5rem;
-}.mb-1 {
-  margin-bottom: 0.25rem;
-}.mt-16 {
-  margin-top: 4rem;
+}.mt-0 {
+  margin-top: 0px;
 }.block {
   display: block;
 }.inline {
@@ -938,8 +942,6 @@ video {
   display: none;
 }.aspect-square {
   aspect-ratio: 1 / 1;
-}.aspect-video {
-  aspect-ratio: 16 / 9;
 }.h-5 {
   height: 1.25rem;
 }.h-16 {
@@ -1002,12 +1004,10 @@ video {
   max-width: 36rem;
 }.max-w-6xl {
   max-width: 72rem;
-}.max-w-2xl {
-  max-width: 42rem;
-}.max-w-xs {
-  max-width: 20rem;
 }.max-w-none {
   max-width: none;
+}.max-w-2xl {
+  max-width: 42rem;
 }.flex-1 {
   flex: 1 1 0%;
 }.shrink-0 {
@@ -1023,9 +1023,6 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }.translate-y-0 {
   --tw-translate-y: 0px;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}.rotate-3 {
-  --tw-rotate: 3deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }.scale-95 {
   --tw-scale-x: .95;
@@ -1045,18 +1042,9 @@ video {
   list-style-position: inside;
 }.list-disc {
   list-style-type: disc;
-}.columns-4 {
-  -moz-columns: 4;
-       columns: 4;
-}.columns-3 {
-  -moz-columns: 3;
-       columns: 3;
 }.columns-1 {
   -moz-columns: 1;
        columns: 1;
-}.break-inside-avoid {
-  -moz-column-break-inside: avoid;
-       break-inside: avoid;
 }.grid-cols-6 {
   grid-template-columns: repeat(6, minmax(0, 1fr));
 }.grid-cols-1 {
@@ -1083,23 +1071,12 @@ video {
   gap: 1rem;
 }.gap-1 {
   gap: 0.25rem;
-}.gap-0 {
-  gap: 0px;
 }.gap-3 {
   gap: 0.75rem;
-}.gap-y-10 {
-  row-gap: 2.5rem;
-}.gap-x-6 {
-  -moz-column-gap: 1.5rem;
-       column-gap: 1.5rem;
-}.gap-x-0 {
-  -moz-column-gap: 0px;
-       column-gap: 0px;
-}.gap-x-1 {
-  -moz-column-gap: 0.25rem;
-       column-gap: 0.25rem;
-}.gap-y-1 {
-  row-gap: 0.25rem;
+}.gap-8 {
+  gap: 2rem;
+}.gap-7 {
+  gap: 1.75rem;
 }.gap-y-16 {
   row-gap: 4rem;
 }.space-x-8 > :not([hidden]) ~ :not([hidden]) {
@@ -1122,10 +1099,12 @@ video {
   --tw-space-x-reverse: 0;
   margin-right: calc(1.5rem * var(--tw-space-x-reverse));
   margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
-}.space-y-3 > :not([hidden]) ~ :not([hidden]) {
+}.space-y-4 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
-  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}.overflow-auto {
+  overflow: auto;
 }.overflow-hidden {
   overflow: hidden;
 }.overflow-y-auto {
@@ -1146,6 +1125,8 @@ video {
   border-radius: 9999px;
 }.rounded-2xl {
   border-radius: 1rem;
+}.rounded-xl {
+  border-radius: 0.75rem;
 }.rounded-l-md {
   border-top-left-radius: 0.375rem;
   border-bottom-left-radius: 0.375rem;
@@ -1198,9 +1179,6 @@ video {
 }.border-gray-500 {
   --tw-border-opacity: 1;
   border-color: rgb(107 114 128 / var(--tw-border-opacity));
-}.border-zinc-100 {
-  --tw-border-opacity: 1;
-  border-color: rgb(244 244 245 / var(--tw-border-opacity));
 }.bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -1253,9 +1231,6 @@ video {
 }.object-cover {
   -o-object-fit: cover;
      object-fit: cover;
-}.object-center {
-  -o-object-position: center;
-     object-position: center;
 }.p-2 {
   padding: 0.5rem;
 }.p-6 {
@@ -1264,6 +1239,8 @@ video {
   padding: 0.125rem;
 }.p-0 {
   padding: 0px;
+}.p-8 {
+  padding: 2rem;
 }.px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -1306,12 +1283,12 @@ video {
 }.py-10 {
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
-}.px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
 }.px-2\.5 {
   padding-left: 0.625rem;
   padding-right: 0.625rem;
+}.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }.pt-6 {
   padding-top: 1.5rem;
 }.pt-5 {
@@ -1445,9 +1422,6 @@ video {
 }.text-zinc-600 {
   --tw-text-opacity: 1;
   color: rgb(82 82 91 / var(--tw-text-opacity));
-}.text-zinc-800 {
-  --tw-text-opacity: 1;
-  color: rgb(39 39 42 / var(--tw-text-opacity));
 }.underline {
   text-decoration-line: underline;
 }.antialiased {
@@ -1465,8 +1439,6 @@ video {
   opacity: 0.25;
 }.opacity-90 {
   opacity: 0.9;
-}.opacity-80 {
-  opacity: 0.8;
 }.shadow-sm {
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
@@ -1491,12 +1463,16 @@ video {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}.ring-inset {
+  --tw-ring-inset: inset;
 }.ring-gray-300 {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(209 213 219 / var(--tw-ring-opacity));
 }.ring-black {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(0 0 0 / var(--tw-ring-opacity));
+}.ring-black\/10 {
+  --tw-ring-color: rgb(0 0 0 / 0.1);
 }.ring-gray-100 {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(243 244 246 / var(--tw-ring-opacity));
@@ -1538,6 +1514,34 @@ video {
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }.ease-in {
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+}.aspect-w-1 {
+    position: relative;
+    padding-bottom: calc(var(--tw-aspect-h) / var(--tw-aspect-w) * 100%);
+    --tw-aspect-w: 1;
+}.aspect-h-1 {
+    --tw-aspect-h: 1;
+}.aspect-w-16 {
+    position: relative;
+    padding-bottom: calc(var(--tw-aspect-h) / var(--tw-aspect-w) * 100%);
+    --tw-aspect-w: 16;
+}.aspect-h-9 {
+    --tw-aspect-h: 9;
+}.aspect-w-1 > * {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}.aspect-w-16 > * {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
 }.hover\:border-gray-300:hover {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
@@ -1574,9 +1578,6 @@ video {
 }.hover\:text-gray-900:hover {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
-}.hover\:text-teal-500:hover {
-  --tw-text-opacity: 1;
-  color: rgb(20 184 166 / var(--tw-text-opacity));
 }.focus\:z-10:focus {
   z-index: 10;
 }.focus\:border-blue-300:focus {
@@ -1687,15 +1688,11 @@ video {
   color: rgb(31 41 55 / var(--tw-text-opacity));
 }.disabled\:opacity-25:disabled {
   opacity: 0.25;
-}.group:hover .group-hover\:opacity-75 {
-  opacity: 0.75;
 }@media (prefers-color-scheme: dark) {.dark\:border-gray-700 {
     --tw-border-opacity: 1;
     border-color: rgb(55 65 81 / var(--tw-border-opacity));
   }.dark\:border-zinc-700\/40 {
     border-color: rgb(63 63 70 / 0.4);
-  }.dark\:border-gray-700\/40 {
-    border-color: rgb(55 65 81 / 0.4);
   }.dark\:bg-gray-900 {
     --tw-bg-opacity: 1;
     background-color: rgb(17 24 39 / var(--tw-bg-opacity));
@@ -1711,12 +1708,6 @@ video {
   }.dark\:text-gray-400 {
     --tw-text-opacity: 1;
     color: rgb(156 163 175 / var(--tw-text-opacity));
-  }.dark\:text-zinc-200 {
-    --tw-text-opacity: 1;
-    color: rgb(228 228 231 / var(--tw-text-opacity));
-  }.dark\:hover\:text-teal-500:hover {
-    --tw-text-opacity: 1;
-    color: rgb(20 184 166 / var(--tw-text-opacity));
   }
 }@media (min-width: 640px) {.sm\:col-span-4 {
     grid-column: span 4 / span 4;
@@ -1769,8 +1760,6 @@ video {
     max-width: 36rem;
   }.sm\:max-w-2xl {
     max-width: 42rem;
-  }.sm\:max-w-none {
-    max-width: none;
   }.sm\:max-w-xs {
     max-width: 20rem;
   }.sm\:flex-1 {
@@ -1786,11 +1775,14 @@ video {
     --tw-scale-x: 1;
     --tw-scale-y: 1;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }.sm\:columns-1 {
-    -moz-columns: 1;
-         columns: 1;
-  }.sm\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }.sm\:columns-3 {
+    -moz-columns: 3;
+         columns: 3;
+  }.sm\:columns-4 {
+    -moz-columns: 4;
+         columns: 4;
+  }.sm\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }.sm\:items-start {
     align-items: flex-start;
   }.sm\:items-center {
@@ -1859,12 +1851,6 @@ video {
     display: grid;
   }.md\:hidden {
     display: none;
-  }.md\:columns-2 {
-    -moz-columns: 2;
-         columns: 2;
-  }.md\:columns-3 {
-    -moz-columns: 3;
-         columns: 3;
   }.md\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }.md\:grid-cols-2 {
@@ -1886,21 +1872,10 @@ video {
     grid-column: span 4 / span 4;
   }.lg\:row-span-2 {
     grid-row: span 2 / span 2;
-  }.lg\:max-w-5xl {
-    max-width: 64rem;
   }.lg\:max-w-none {
     max-width: none;
-  }.lg\:columns-4 {
-    -moz-columns: 4;
-         columns: 4;
-  }.lg\:columns-6 {
-    -moz-columns: 6;
-         columns: 6;
-  }.lg\:columns-5 {
-    -moz-columns: 5;
-         columns: 5;
-  }.lg\:grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }.lg\:max-w-5xl {
+    max-width: 64rem;
   }.lg\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }.lg\:grid-rows-\[auto_1fr\] {
@@ -1916,11 +1891,6 @@ video {
   }.lg\:pl-20 {
     padding-left: 5rem;
   }
-}@media (min-width: 1280px) {.xl\:grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
-  }.xl\:gap-x-8 {
-    -moz-column-gap: 2rem;
-         column-gap: 2rem;
-  }
 }
+
 
