--- a/public/css/app.css
+++ b/public/css/app.css
@@ -841,6 +841,19 @@ video {
   right: 0px;
   bottom: 0px;
   left: 0px;
+}.inset-full {
+  top: 100%;
+  right: 100%;
+  bottom: 100%;
+  left: 100%;
+}.inset-1\/2 {
+  top: 50%;
+  right: 50%;
+  bottom: 50%;
+  left: 50%;
+}.inset-x-2\/4 {
+  left: 50%;
+  right: 50%;
 }.left-0 {
   left: 0px;
 }.right-0 {
@@ -859,6 +872,8 @@ video {
   z-index: 50;
 }.z-40 {
   z-index: 40;
+}.z-10 {
+  z-index: 10;
 }.col-span-6 {
   grid-column: span 6 / span 6;
 }.mx-auto {
@@ -962,6 +977,8 @@ video {
   height: 5rem;
 }.h-full {
   height: 100%;
+}.h-96 {
+  height: 24rem;
 }.min-h-screen {
   min-height: 100vh;
 }.w-5 {
@@ -994,6 +1011,8 @@ video {
   width: 50%;
 }.w-20 {
   width: 5rem;
+}.w-96 {
+  width: 24rem;
 }.min-w-0 {
   min-width: 0px;
 }.max-w-screen-xl {
@@ -1127,6 +1146,8 @@ video {
   border-radius: 1rem;
 }.rounded-xl {
   border-radius: 0.75rem;
+}.rounded-sm {
+  border-radius: 0.125rem;
 }.rounded-l-md {
   border-top-left-radius: 0.375rem;
   border-bottom-left-radius: 0.375rem;
@@ -1220,8 +1241,19 @@ video {
   background-color: rgb(17 24 39 / var(--tw-bg-opacity));
 }.bg-white\/90 {
   background-color: rgb(255 255 255 / 0.9);
+}.bg-gray-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+}.bg-gray-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
+}.bg-indigo-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(165 180 252 / var(--tw-bg-opacity));
 }.bg-opacity-25 {
   --tw-bg-opacity: 0.25;
+}.bg-opacity-75 {
+  --tw-bg-opacity: 0.75;
 }.bg-cover {
   background-size: cover;
 }.bg-center {
@@ -1241,6 +1273,8 @@ video {
   padding: 0px;
 }.p-8 {
   padding: 2rem;
+}.p-3 {
+  padding: 0.75rem;
 }.px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -1321,10 +1355,14 @@ video {
   text-align: center;
 }.text-right {
   text-align: right;
+}.align-middle {
+  vertical-align: middle;
 }.font-sans {
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }.font-mono {
   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+}.font-serif {
+  font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
 }.text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
@@ -1354,6 +1392,8 @@ video {
   font-weight: 700;
 }.uppercase {
   text-transform: uppercase;
+}.italic {
+  font-style: italic;
 }.leading-5 {
   line-height: 1.25rem;
 }.leading-7 {
@@ -1439,6 +1479,10 @@ video {
   opacity: 0.25;
 }.opacity-90 {
   opacity: 0.9;
+}.opacity-70 {
+  opacity: 0.7;
+}.opacity-40 {
+  opacity: 0.4;
 }.shadow-sm {
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
@@ -1563,6 +1607,9 @@ video {
 }.hover\:bg-gray-50:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+}.hover\:bg-white:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }.hover\:text-gray-500:hover {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
@@ -1578,6 +1625,14 @@ video {
 }.hover\:text-gray-900:hover {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
+}.hover\:opacity-70:hover {
+  opacity: 0.7;
+}.hover\:opacity-90:hover {
+  opacity: 0.9;
+}.hover\:opacity-50:hover {
+  opacity: 0.5;
+}.hover\:opacity-40:hover {
+  opacity: 0.4;
 }.focus\:z-10:focus {
   z-index: 10;
 }.focus\:border-blue-300:focus {
@@ -1762,6 +1817,8 @@ video {
     max-width: 42rem;
   }.sm\:max-w-xs {
     max-width: 20rem;
+  }.sm\:max-w-4xl {
+    max-width: 56rem;
   }.sm\:flex-1 {
     flex: 1 1 0%;
   }.sm\:translate-y-0 {
