--- a/public/css/app.css
+++ b/public/css/app.css
@@ -449,23 +449,6 @@ video {
   --tw-backdrop-opacity:  ;
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
-}.container {
-  width: 100%;
-}@media (min-width: 640px) {.container {
-    max-width: 640px;
-  }
-}@media (min-width: 768px) {.container {
-    max-width: 768px;
-  }
-}@media (min-width: 1024px) {.container {
-    max-width: 1024px;
-  }
-}@media (min-width: 1280px) {.container {
-    max-width: 1280px;
-  }
-}@media (min-width: 1536px) {.container {
-    max-width: 1536px;
-  }
 }.prose {
   color: var(--tw-prose-body);
   max-width: 65ch;
@@ -858,29 +841,12 @@ video {
   right: 0px;
   bottom: 0px;
   left: 0px;
-}.inset-full {
-  top: 100%;
-  right: 100%;
-  bottom: 100%;
-  left: 100%;
-}.inset-1\/2 {
-  top: 50%;
-  right: 50%;
-  bottom: 50%;
-  left: 50%;
-}.inset-x-2\/4 {
-  left: 50%;
-  right: 50%;
 }.left-0 {
   left: 0px;
 }.right-0 {
   right: 0px;
 }.top-0 {
   top: 0px;
-}.-top-8 {
-  top: -2rem;
-}.-bottom-8 {
-  bottom: -2rem;
 }.bottom-0 {
   bottom: 0px;
 }.top-1\/2 {
@@ -895,8 +861,6 @@ video {
   z-index: 50;
 }.z-40 {
   z-index: 40;
-}.z-10 {
-  z-index: 10;
 }.col-span-6 {
   grid-column: span 6 / span 6;
 }.mx-auto {
@@ -908,9 +872,6 @@ video {
 }.-my-2 {
   margin-top: -0.5rem;
   margin-bottom: -0.5rem;
-}.my-auto {
-  margin-top: auto;
-  margin-bottom: auto;
 }.ml-3 {
   margin-left: 0.75rem;
 }.-ml-px {
@@ -965,14 +926,12 @@ video {
   margin-top: 2.25rem;
 }.mt-20 {
   margin-top: 5rem;
-}.-ml-2 {
-  margin-left: -0.5rem;
-}.mt-0 {
-  margin-top: 0px;
-}.mr-1 {
-  margin-right: 0.25rem;
 }.mt-24 {
   margin-top: 6rem;
+}.mt-0 {
+  margin-top: 0px;
+}.-ml-2 {
+  margin-left: -0.5rem;
 }.block {
   display: block;
 }.inline {
@@ -1009,10 +968,8 @@ video {
   height: 100%;
 }.h-96 {
   height: 24rem;
-}.h-auto {
-  height: auto;
-}.h-2\/3 {
-  height: 66.666667%;
+}.h-52 {
+  height: 13rem;
 }.min-h-screen {
   min-height: 100vh;
 }.w-5 {
@@ -1045,12 +1002,6 @@ video {
   width: 50%;
 }.w-20 {
   width: 5rem;
-}.w-96 {
-  width: 24rem;
-}.w-\[500px\] {
-  width: 500px;
-}.w-1\/4 {
-  width: 25%;
 }.w-4\/5 {
   width: 80%;
 }.min-w-0 {
@@ -1114,8 +1065,6 @@ video {
   grid-template-columns: repeat(6, minmax(0, 1fr));
 }.grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
-}.grid-cols-4 {
-  grid-template-columns: repeat(4, minmax(0, 1fr));
 }.flex-row {
   flex-direction: row;
 }.flex-col {
@@ -1140,12 +1089,6 @@ video {
   gap: 0.25rem;
 }.gap-3 {
   gap: 0.75rem;
-}.gap-8 {
-  gap: 2rem;
-}.gap-7 {
-  gap: 1.75rem;
-}.gap-10 {
-  gap: 2.5rem;
 }.gap-y-16 {
   row-gap: 4rem;
 }.space-x-8 > :not([hidden]) ~ :not([hidden]) {
@@ -1168,20 +1111,6 @@ video {
   --tw-space-x-reverse: 0;
   margin-right: calc(1.5rem * var(--tw-space-x-reverse));
   margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
-}.space-y-4 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
-}.space-y-3 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
-}.space-y-10 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(2.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(2.5rem * var(--tw-space-y-reverse));
-}.overflow-auto {
-  overflow: auto;
 }.overflow-hidden {
   overflow: hidden;
 }.overflow-y-auto {
@@ -1202,10 +1131,6 @@ video {
   border-radius: 9999px;
 }.rounded-2xl {
   border-radius: 1rem;
-}.rounded-xl {
-  border-radius: 0.75rem;
-}.rounded-sm {
-  border-radius: 0.125rem;
 }.rounded-l-md {
   border-top-left-radius: 0.375rem;
   border-bottom-left-radius: 0.375rem;
@@ -1246,9 +1171,6 @@ video {
 }.border-gray-100 {
   --tw-border-opacity: 1;
   border-color: rgb(243 244 246 / var(--tw-border-opacity));
-}.border-gray-400 {
-  --tw-border-opacity: 1;
-  border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }.border-gray-700 {
   --tw-border-opacity: 1;
   border-color: rgb(55 65 81 / var(--tw-border-opacity));
@@ -1258,6 +1180,9 @@ video {
 }.border-gray-500 {
   --tw-border-opacity: 1;
   border-color: rgb(107 114 128 / var(--tw-border-opacity));
+}.border-gray-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }.bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -1299,19 +1224,14 @@ video {
   background-color: rgb(17 24 39 / var(--tw-bg-opacity));
 }.bg-white\/90 {
   background-color: rgb(255 255 255 / 0.9);
-}.bg-gray-700 {
+}.bg-gray-300 {
   --tw-bg-opacity: 1;
-  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
-}.bg-gray-400 {
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+}.bg-gray-600 {
   --tw-bg-opacity: 1;
-  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
-}.bg-indigo-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(165 180 252 / var(--tw-bg-opacity));
+  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
 }.bg-opacity-25 {
   --tw-bg-opacity: 0.25;
-}.bg-opacity-75 {
-  --tw-bg-opacity: 0.75;
 }.bg-cover {
   background-size: cover;
 }.bg-center {
@@ -1329,10 +1249,6 @@ video {
   padding: 0.125rem;
 }.p-0 {
   padding: 0px;
-}.p-8 {
-  padding: 2rem;
-}.p-3 {
-  padding: 0.75rem;
 }.px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -1413,14 +1329,10 @@ video {
   text-align: center;
 }.text-right {
   text-align: right;
-}.align-middle {
-  vertical-align: middle;
 }.font-sans {
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }.font-mono {
   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-}.font-serif {
-  font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
 }.text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
@@ -1442,19 +1354,16 @@ video {
 }.text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
-}.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
 }.font-medium {
   font-weight: 500;
 }.font-semibold {
   font-weight: 600;
 }.font-bold {
   font-weight: 700;
+}.font-normal {
+  font-weight: 400;
 }.uppercase {
   text-transform: uppercase;
-}.italic {
-  font-style: italic;
 }.leading-5 {
   line-height: 1.25rem;
 }.leading-7 {
@@ -1465,10 +1374,10 @@ video {
   line-height: 1rem;
 }.tracking-widest {
   letter-spacing: 0.1em;
-}.tracking-wider {
-  letter-spacing: 0.05em;
 }.tracking-tight {
   letter-spacing: -0.025em;
+}.tracking-wider {
+  letter-spacing: 0.05em;
 }.text-gray-500 {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
@@ -1514,30 +1423,18 @@ video {
 }.text-green-500 {
   --tw-text-opacity: 1;
   color: rgb(34 197 94 / var(--tw-text-opacity));
+}.text-zinc-600 {
+  --tw-text-opacity: 1;
+  color: rgb(82 82 91 / var(--tw-text-opacity));
+}.text-green-900 {
+  --tw-text-opacity: 1;
+  color: rgb(20 83 45 / var(--tw-text-opacity));
 }.text-gray-200 {
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
 }.text-gray-300 {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
-}.text-zinc-600 {
-  --tw-text-opacity: 1;
-  color: rgb(82 82 91 / var(--tw-text-opacity));
-}.text-green-300 {
-  --tw-text-opacity: 1;
-  color: rgb(134 239 172 / var(--tw-text-opacity));
-}.text-teal-900 {
-  --tw-text-opacity: 1;
-  color: rgb(19 78 74 / var(--tw-text-opacity));
-}.text-green-900 {
-  --tw-text-opacity: 1;
-  color: rgb(20 83 45 / var(--tw-text-opacity));
-}.text-lime-900 {
-  --tw-text-opacity: 1;
-  color: rgb(54 83 20 / var(--tw-text-opacity));
-}.text-gray-100 {
-  --tw-text-opacity: 1;
-  color: rgb(243 244 246 / var(--tw-text-opacity));
 }.underline {
   text-decoration-line: underline;
 }.antialiased {
@@ -1555,10 +1452,12 @@ video {
   opacity: 0.25;
 }.opacity-90 {
   opacity: 0.9;
-}.opacity-70 {
-  opacity: 0.7;
 }.opacity-40 {
   opacity: 0.4;
+}.opacity-70 {
+  opacity: 0.7;
+}.opacity-60 {
+  opacity: 0.6;
 }.shadow-sm {
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
@@ -1583,54 +1482,17 @@ video {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}.ring-inset {
-  --tw-ring-inset: inset;
 }.ring-gray-300 {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(209 213 219 / var(--tw-ring-opacity));
 }.ring-black {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(0 0 0 / var(--tw-ring-opacity));
-}.ring-black\/10 {
-  --tw-ring-color: rgb(0 0 0 / 0.1);
 }.ring-gray-100 {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(243 244 246 / var(--tw-ring-opacity));
 }.ring-opacity-5 {
   --tw-ring-opacity: 0.05;
-}.blur-md {
-  --tw-blur: blur(12px);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}.drop-shadow-md {
-  --tw-drop-shadow: drop-shadow(0 4px 3px rgb(0 0 0 / 0.07)) drop-shadow(0 2px 2px rgb(0 0 0 / 0.06));
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}.drop-shadow-xl {
-  --tw-drop-shadow: drop-shadow(0 20px 13px rgb(0 0 0 / 0.03)) drop-shadow(0 8px 5px rgb(0 0 0 / 0.08));
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}.drop-shadow {
-  --tw-drop-shadow: drop-shadow(0 1px 2px rgb(0 0 0 / 0.1)) drop-shadow(0 1px 1px rgb(0 0 0 / 0.06));
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}.drop-shadow-\[\] {
-  --tw-drop-shadow: drop-shadow();
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}.drop-shadow-\[0_35px_35px_rgba\(0\2c 0\2c 0\2c 0\.25\)\] {
-  --tw-drop-shadow: drop-shadow(0 35px 35px rgba(0,0,0,0.25));
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}.drop-shadow-\[0_35px_35px_rgba\(0\2c 0\2c 0\2c 0\.5\)\] {
-  --tw-drop-shadow: drop-shadow(0 35px 35px rgba(0,0,0,0.5));
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}.drop-shadow-\[0_35px_35px_rgba\(0\2c 0\2c 0\2c 0\.7\)\] {
-  --tw-drop-shadow: drop-shadow(0 35px 35px rgba(0,0,0,0.7));
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}.drop-shadow-\[0_15px_15px_rgba\(0\2c 0\2c 0\2c 0\.7\)\] {
-  --tw-drop-shadow: drop-shadow(0 15px 15px rgba(0,0,0,0.7));
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}.drop-shadow-\[0_15px_15px_rgba\(0\2c 0\2c 0\2c 1\)\] {
-  --tw-drop-shadow: drop-shadow(0 15px 15px rgba(0,0,0,1));
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}.invert {
-  --tw-invert: invert(100%);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }.filter {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }.backdrop-blur {
@@ -1695,8 +1557,6 @@ video {
     right: 0;
     bottom: 0;
     left: 0;
-}.hover\:block:hover {
-  display: block;
 }.hover\:border-gray-300:hover {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
@@ -1718,9 +1578,6 @@ video {
 }.hover\:bg-gray-50:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
-}.hover\:bg-white:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }.hover\:text-gray-500:hover {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
@@ -1736,17 +1593,10 @@ video {
 }.hover\:text-gray-900:hover {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
-}.hover\:opacity-70:hover {
-  opacity: 0.7;
 }.hover\:opacity-90:hover {
   opacity: 0.9;
-}.hover\:opacity-50:hover {
-  opacity: 0.5;
-}.hover\:opacity-40:hover {
-  opacity: 0.4;
-}.hover\:drop-shadow-xl:hover {
-  --tw-drop-shadow: drop-shadow(0 20px 13px rgb(0 0 0 / 0.03)) drop-shadow(0 8px 5px rgb(0 0 0 / 0.08));
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}.hover\:opacity-60:hover {
+  opacity: 0.6;
 }.focus\:z-10:focus {
   z-index: 10;
 }.focus\:border-blue-300:focus {
@@ -1880,6 +1730,8 @@ video {
   }
 }@media (min-width: 640px) {.sm\:col-span-4 {
     grid-column: span 4 / span 4;
+  }.sm\:col-span-2 {
+    grid-column: span 2 / span 2;
   }.sm\:mx-0 {
     margin-left: 0px;
     margin-right: 0px;
@@ -1931,8 +1783,6 @@ video {
     max-width: 42rem;
   }.sm\:max-w-xs {
     max-width: 20rem;
-  }.sm\:max-w-4xl {
-    max-width: 56rem;
   }.sm\:flex-1 {
     flex: 1 1 0%;
   }.sm\:translate-y-0 {
@@ -1949,15 +1799,6 @@ video {
   }.sm\:columns-3 {
     -moz-columns: 3;
          columns: 3;
-  }.sm\:columns-4 {
-    -moz-columns: 4;
-         columns: 4;
-  }.sm\:columns-2 {
-    -moz-columns: 2;
-         columns: 2;
-  }.sm\:columns-1 {
-    -moz-columns: 1;
-         columns: 1;
   }.sm\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }.sm\:items-start {
@@ -2042,8 +1883,6 @@ video {
     border-top-width: 0px;
   }.md\:border-l {
     border-left-width: 1px;
-  }.md\:filter-none {
-    filter: none;
   }
 }@media (min-width: 1024px) {.lg\:order-first {
     order: -9999;
