--- a/public/css/app.css
+++ b/public/css/app.css
@@ -853,8 +853,6 @@ video {
   top: 50%;
 }.left-1\/2 {
   left: 50%;
-}.isolate {
-  isolation: isolate;
 }.z-0 {
   z-index: 0;
 }.z-50 {
@@ -928,8 +926,6 @@ video {
   margin-top: 5rem;
 }.mt-0 {
   margin-top: 0px;
-}.mt-24 {
-  margin-top: 6rem;
 }.-ml-2 {
   margin-left: -0.5rem;
 }.block {
@@ -966,8 +962,6 @@ video {
   height: 5rem;
 }.h-full {
   height: 100%;
-}.h-96 {
-  height: 24rem;
 }.h-52 {
   height: 13rem;
 }.min-h-screen {
@@ -1002,8 +996,6 @@ video {
   width: 50%;
 }.w-20 {
   width: 5rem;
-}.w-4\/5 {
-  width: 80%;
 }.min-w-0 {
   min-width: 0px;
 }.max-w-screen-xl {
@@ -1169,6 +1161,9 @@ video {
 }.border-gray-100 {
   --tw-border-opacity: 1;
   border-color: rgb(243 244 246 / var(--tw-border-opacity));
+}.border-gray-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }.border-gray-700 {
   --tw-border-opacity: 1;
   border-color: rgb(55 65 81 / var(--tw-border-opacity));
@@ -1178,9 +1173,6 @@ video {
 }.border-gray-500 {
   --tw-border-opacity: 1;
   border-color: rgb(107 114 128 / var(--tw-border-opacity));
-}.border-gray-400 {
-  --tw-border-opacity: 1;
-  border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }.bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -1366,10 +1358,10 @@ video {
   line-height: 1rem;
 }.tracking-widest {
   letter-spacing: 0.1em;
-}.tracking-tight {
-  letter-spacing: -0.025em;
 }.tracking-wider {
   letter-spacing: 0.05em;
+}.tracking-tight {
+  letter-spacing: -0.025em;
 }.text-gray-500 {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
@@ -1415,18 +1407,18 @@ video {
 }.text-green-500 {
   --tw-text-opacity: 1;
   color: rgb(34 197 94 / var(--tw-text-opacity));
-}.text-zinc-600 {
-  --tw-text-opacity: 1;
-  color: rgb(82 82 91 / var(--tw-text-opacity));
-}.text-green-900 {
-  --tw-text-opacity: 1;
-  color: rgb(20 83 45 / var(--tw-text-opacity));
 }.text-gray-200 {
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
 }.text-gray-300 {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
+}.text-zinc-600 {
+  --tw-text-opacity: 1;
+  color: rgb(82 82 91 / var(--tw-text-opacity));
+}.text-green-900 {
+  --tw-text-opacity: 1;
+  color: rgb(20 83 45 / var(--tw-text-opacity));
 }.underline {
   text-decoration-line: underline;
 }.antialiased {
@@ -1581,8 +1573,8 @@ video {
 }.hover\:text-gray-900:hover {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
-}.hover\:opacity-90:hover {
-  opacity: 0.9;
+}.hover\:opacity-70:hover {
+  opacity: 0.7;
 }.hover\:opacity-60:hover {
   opacity: 0.6;
 }.focus\:z-10:focus {
@@ -1605,9 +1597,6 @@ video {
 }.focus\:border-gray-300:focus {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
-}.focus\:border-indigo-500:focus {
-  --tw-border-opacity: 1;
-  border-color: rgb(99 102 241 / var(--tw-border-opacity));
 }.focus\:bg-indigo-600:focus {
   --tw-bg-opacity: 1;
   background-color: rgb(79 70 229 / var(--tw-bg-opacity));
@@ -1646,10 +1635,6 @@ video {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}.focus\:ring-1:focus {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }.focus\:ring-inset:focus {
   --tw-ring-inset: inset;
 }.focus\:ring-gray-300:focus {
@@ -1667,9 +1652,6 @@ video {
 }.focus\:ring-gray-400:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(156 163 175 / var(--tw-ring-opacity));
-}.focus\:ring-indigo-500:focus {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(99 102 241 / var(--tw-ring-opacity));
 }.focus\:ring-opacity-50:focus {
   --tw-ring-opacity: 0.5;
 }.active\:bg-gray-100:active {
@@ -1787,6 +1769,9 @@ video {
   }.sm\:columns-3 {
     -moz-columns: 3;
          columns: 3;
+  }.sm\:columns-4 {
+    -moz-columns: 4;
+         columns: 4;
   }.sm\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }.sm\:items-start {
